# TentacleOS

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  README.pt.md  png_conversor_to_bin.sh  sdkconfig  sdkconfig.old
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
components/Applications/: CMakeLists.txt
components/Applications/SubGhz/: cc1101_spectrum.c  subghz_receiver.c  subghz_spectrum.c
components/Applications/SubGhz/include/: subghz_spectrum.h
components/Applications/bad_usb/: README.md  bad_usb.c  ducky_parser.c  hid_hal.c
components/Applications/bad_usb/include/: bad_usb.h  ducky_parser.h  hid_hal.h
components/Applications/bluetooth/: android_spam.c  apple_juice_spam.c  ble_scanner.c  canned_spam.c  oui_lookup.c  samsung_spam.c  skimmer_detector.c  sour_apple_spam.c  swift_pair_spam.c  tracker_detector.c  tutti_frutti_spam.c  uuid_lookup.c
components/Applications/bluetooth/include/: android_spam.h  apple_juice_spam.h  canned_spam.h  oui_lookup.h  samsung_spam.h  skimmer_detector.h  sour_apple_spam.h  swift_pair_spam.h  tracker_detector.h  tutti_frutti_spam.h  uuid_lookup.h
components/Applications/ui/: README.md  ui_manager.c  ui_theme.c
components/Applications/ui/components/header/: header_ui.c
components/Applications/ui/components/keyboard/: keyboard_ui.c
components/Applications/ui/components/keyboard/include/: keyboard_ui.h
components/Applications/ui/components/message_box/: msgbox_ui.c
components/Applications/ui/components/message_box/include/: msgbox_ui.h
components/Applications/ui/include/: ui_manager.h  ui_theme.h
components/Applications/ui/screens/SubGhz/: subghz_spectrum_ui.c
components/Applications/ui/screens/SubGhz/include/: subghz_spectrum_ui.h
components/Applications/ui/screens/badusb/: ui_badusb_browser.c  ui_badusb_connect.c  ui_badusb_layout.c  ui_badusb_menu.c  ui_badusb_running.c
components/Applications/ui/screens/badusb/include/: ui_badusb_browser.h
components/Applications/ui/screens/bluetooth/: ui_ble_menu.c  ui_ble_spam.c
components/Applications/ui/screens/bluetooth/include/: ui_ble_menu.h  ui_ble_spam.h
components/Applications/ui/screens/boot/: boot_ui.c
components/Applications/ui/screens/boot/include/: boot_ui.h
components/Applications/ui/screens/connect_bluetooth/: connect_bt_ui.c
components/Applications/ui/screens/connect_bluetooth/include/: connect_bt_ui.h
components/Applications/ui/screens/connect_wifi/: connect_wifi_ui.c
components/Applications/ui/screens/connect_wifi/include/: connect_wifi_ui.h
components/Applications/ui/screens/connection_settings/: connection_settings_ui.c
components/Applications/ui/screens/display_settings/: display_settings_ui.c
components/Applications/ui/screens/home/: home_ui.c
components/Applications/ui/screens/interface_settings/: interface_settings_ui.c
components/Applications/ui/screens/interface_settings/include/: interface_settings_ui.h
components/Applications/ui/screens/menu/: menu_ui.c
components/Applications/ui/screens/settings/: settings_ui.c
components/Applications/ui/screens/settings/include/: settings_ui.h
components/Applications/ui/screens/wifi/: wifi_scan_ap_ui.c  wifi_scan_menu_ui.c  wifi_scan_stations_ui.c  wifi_scan_ui.c  wifi_ui.c
components/Applications/ui/screens/wifi/include/: wifi_scan_ap_ui.h  wifi_scan_menu_ui.h  wifi_scan_stations_ui.h  wifi_ui.h
components/Applications/wifi/: ap_scanner.c  beacon_spam.c  client_scanner.c  deauther_detector.c  evil_twin.c  port_scan.c  signal_monitor.c  target_scanner.c  wifi_deauther.c  wifi_flood.c  wifi_sniffer.c
components/Applications/wifi/include/: ap_scanner.h  beacon_spam.h  pcap_serializer.h  target_scanner.h  wifi_deauther.h  wifi_flood.h  wifi_sniffer.h
components/Core/: CMakeLists.txt  kernel.c  sys_monitor.c
components/Service/: CMakeLists.txt
components/Service/bluetooth/: README.md  bluetooth_service.c
components/Service/bluetooth/include/: bluetooth_service.h
components/Service/console/: README.md  console_service.c
components/Service/console/commands/: cmd_system.c
components/Service/console/include/: console_service.h
components/Service/dns_server/: README.md
components/Service/http_server/: README.md
components/Service/lvgl_port/: README.md  lv_port_disp.c
components/Service/storage_api/: README.md
components/Service/storage_vfs/: vfs_littlefs.c
components/Service/storage_vfs/include/: vfs_config.h  vfs_core.h  vfs_littlefs.h
components/Service/wifi/: README.md  mac_vendor.c  wifi_service.c
components/Service/wifi/include/: mac_vendor.h  wifi_80211.h  wifi_service.h
firmware_c5/components/Applications/: CMakeLists.txt
firmware_c5/components/Applications/bluetooth/: ble_sniffer.c
firmware_c5/components/Applications/ui/: ui_manager.c
firmware_c5/components/Applications/ui/components/button/: button_ui.c
firmware_c5/components/Applications/ui/components/menu_component/include/: menu_component_ui.h
firmware_c5/components/Applications/ui/components/terminal/: terminal_ui.c
firmware_c5/components/Applications/ui/components/terminal/include/: terminal_ui.h
firmware_c5/components/Applications/ui/screens/wifi/: wifi_attack_menu_ui.c  wifi_packets_menu_ui.c  wifi_scan_probe_ui.c  wifi_sniffer_attack_ui.c  wifi_sniffer_handshake_ui.c  wifi_sniffer_raw_ui.c
firmware_c5/components/Applications/ui/screens/wifi/include/: wifi_packets_menu_ui.h  wifi_probe_flood_ui.h  wifi_sniffer_raw_ui.h
firmware_c5/components/Applications/wifi/: evil_twin.c  probe_monitor.c  wifi_sniffer.c
firmware_c5/components/Applications/wifi/include/: evil_twin.h  probe_monitor.h  wifi_deauther.h  wifi_sniffer.h
firmware_c5/components/Drivers/: CMakeLists.txt
firmware_c5/components/Drivers/spi/: spi.c
firmware_c5/components/Drivers/spi/include/: spi.h
firmware_c5/components/Drivers/spi_slave/: CMakeLists.txt  spi_slave_driver.c
firmware_c5/components/Drivers/spi_slave/include/: spi_slave_driver.h
firmware_p4/: sdkconfig
firmware_p4/main/: CMakeLists.txt
main/: idf_component.yml
tools/: build_and_flash.sh
(+91 files in other folders)
